test/fail/interpolation/interp_multi_expr.lly
#[
SyntaxError: Interpolation block must be a single expression.
    from interp_multi_expr.lly:6:
]#

var v = $"^(10 20)"
